spade-tests/src/snapshots/spade_tests__linear_check__destructuring_linear_type_requires_use_of_subtypes.snap
---
source: spade-tests/src/linear_check.rs
---
entity x(a: (&mut bool, &mut bool)) -> &mut bool {
    let (x, y) = a;
    x
}


error: Unused resource
  ┌─ testinput:2:13
  │
2 │     let (x, y) = a;
  │             ^ y is unused
  │
  = note: y is a &mut value which must be set


